--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,6 @@
     tools:context=".LoginActivity"
     android:background="@drawable/background">
 
-
     <ImageView
         android:id="@+id/img_people"
         android:layout_width="461dp"
@@ -24,7 +23,7 @@
         tools:ignore="ContentDescription,MissingConstraints" />
 
     <ImageView
-        android:id="@+id/img_key"
+        android:id="@+id/icon_key"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="@+id/loginPasswordEditText"
@@ -36,7 +35,7 @@
         tools:ignore="ContentDescription" />
 
     <ImageView
-        android:id="@+id/img_email"
+        android:id="@+id/icon_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:importantForAccessibility="no"
@@ -49,7 +48,7 @@
         app:srcCompat="@drawable/et_email" />
 
     <ImageView
-        android:id="@+id/img_logo"
+        android:id="@+id/icon_logo"
         android:layout_width="85dp"
         android:layout_height="84dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -122,7 +121,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="20dp"
         android:shadowColor="#88000000"
-        android:text="@string/text_createaccount"
+        android:text="@string/text_clickable_create"
         android:textColor="#80FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -139,7 +138,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="20dp"
         android:shadowColor="#88000000"
-        android:text="@string/text_resetpassword"
+        android:text="@string/text_clickable_reset"
         android:textColor="#80FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -164,7 +163,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.045"
-        app:layout_constraintStart_toEndOf="@+id/img_logo"
+        app:layout_constraintStart_toEndOf="@+id/icon_logo"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.092"
         tools:ignore="TextSizeCheck" />
@@ -184,7 +183,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.044"
-        app:layout_constraintStart_toEndOf="@+id/img_logo"
+        app:layout_constraintStart_toEndOf="@+id/icon_logo"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.042"
         tools:ignore="TextSizeCheck" />
